# python-sdk

./: .env.example  README.md  __init__.py  client.py  crawl.py  extract.py  pyproject.toml  robot.py  scrape.py  search.py  types.py
builders/: __init__.py  extract_builder.py  workflow_builder.py
examples/: README.md  basic_crawl.py  basic_extraction.py  basic_search.py  chained_extract.py  complete_workflow.py  form_fill_screenshot.py  list_pagination.py  llm_extraction.py  robot_management.py  scheduling.py  simple_scrape.py  team_robot.py  webhooks.py
llms/: __init__.py  factory.py  types.py
llms/providers/: anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
